--- a/vignettes/x01_tf_Vectors.Rmd
+++ b/vignettes/x01_tf_Vectors.Rmd
@@ -20,8 +20,8 @@ knitr::opts_chunk$set(
   out.width = "90%"
 )
 
-library(tidyverse)
-library(viridisLite)
+library("tidyverse")
+library("viridisLite")
 
 theme_set(theme_minimal() + theme(legend.position = "bottom"))
 
@@ -101,7 +101,7 @@ cca_five %>% tf_arg() %>% str
 cca_five %>% tf_domain() 
 ```
 
-- each **`tfd`**-vector contains an **`evaluator`** function that defines how to inter-/extrapolate `evaluations` between `arg`s (and remembers results of previous calls)
+- each **`tfd`**-vector contains an **`evaluator`** function that defines how to inter-/extrapolate `evaluations` between `arg`s
 
 ```{r}
 tf_evaluator(cca_five) %>% str
@@ -138,7 +138,7 @@ cca %>% tfb(verbose = FALSE) %>% object.size() %>% print(units = "Kb")
 ### **`tfb_spline`**: spline basis
 
 - default for `tfb()`
-- accepts all arguments of `mgcv`'s `s()`-syntax: control basis type `bs`, basis dimension `k`, penalty order `m`
+- accepts all arguments of `mgcv`'s `s()`-syntax: basis type `bs`, basis dimension `k`, penalty order `m`, etc...
 - also does non-Gaussian fits: `family` argument 
     - all exponential families
     - but also: $t$-distribution, ZI-Poisson, Beta, ... 
@@ -147,7 +147,10 @@ cca %>% tfb(verbose = FALSE) %>% object.size() %>% print(units = "Kb")
 cca_five_b <- cca_five %>% tfb()
 cca_five_b[1:2]
 cca_five[1:2] %>% tfb(bs = "tp", k = 55)
-cca_five[1:2] %>% tfb(bs = "ps", m = c(2,1), family = mgcv::betar(link = "cloglog"))
+
+# functions represent ratios in (0,1), so a Beta-distribution is more appropriate:
+cca_five[1:2] %>% 
+  tfb(bs = "ps", m = c(2,1), family = mgcv::betar(link = "cloglog"))
 ```
 
 ### Penalization: 
@@ -161,6 +164,10 @@ cca_five_b %>% plot(col = "red")
 cca_five %>% tfb(k = 35, penalized = FALSE) %>% lines(col = "blue")
 cca_five %>% tfb(sp = .001) %>% lines(col = "orange")
 ```
+
+Right plot shows smoothing with function-specific penalization in red, without penalization in blue, 
+and with manually set strong smoothing (`sp` $\to 0$) in orange.
+
 
 **"Global" smoothing**:  
 
@@ -205,19 +212,19 @@ minimal *percentage of variance explained* `pve`
 
 ```{r}
 (cca_five_fpc <- cca_five %>% tfb_fpc(pve = .999))
-(cca_five_fpc_lowrank <- cca_five %>% tfb_fpc(pve = .3))
+(cca_five_fpc_lowrank <- cca_five %>% tfb_fpc(pve = .6))
 ```
 
 ```{r}
 layout(t(1:2))
 cca_five %>% plot()
 cca_five_fpc  %>% plot(col = "red", ylab = "tfb_fpc(cca_five)")
-cca_five_fpc_lowrank %>% lines(col = "blue")
+cca_five_fpc_lowrank %>% lines(col = "blue", lty = 2)
 ```
 
 `tfb_fpc` is currently only implemented for data on identical 
 (but possibly non-equidistant) grids. The **`{refunder}`** `rfr_fpca`-functions 
-provide FPCA methods for irregular and sparse data and regularized/smoothed FPCA.
+provide FPCA methods appropriate for highly irregular and sparse data and regularized/smoothed FPCA.
 
 
 # `tf`-Class: Methods
@@ -243,29 +250,46 @@ cca_five <- unname(cca_five)
 ```{r}
 cca_five[1] + cca_five[1] == 2 * cca_five[1]
 log(exp(cca_five[2])) == cca_five[2]
-cca_five - (2:-2) != cca_five 
+(cca_five - (2:-2)) != cca_five 
 ```
 
 ```{r, echo = FALSE}
 names(cca_five) <- n_cca_five
 ```
 
-### summarize: 
+### summarize across a vector of functions: 
 
+Compute functional summaries like mean functions, functional standard deviations or variances or functional data depths over a vector of functional data:
 ```{r}
 c(mean = mean(cca_five), sd = sd(cca_five))
 
 tf_depth(cca_five) ## Modified Band-2 Depth (à la Sun/Genton/Nychka, 2012), others to come.
 median(cca_five) == cca_five[which.max(tf_depth(cca_five))]
+summary(cca_five)
 ```
 
-In addition, **`tidyfun`** provides methods specific for functional data:
+### summarize each function over its domain: 
+
+Compute summaries for each function like its mean or extreme values, quantiles, etc.
+```{r}
+tf_fmean(cca_five) #mean of each function's evaluations
+tf_fmax(cca_five)  #max of each function's evaluations
+#25%-tile of each f(t) for t > .5:
+tf_fwise(cca_five, 
+         ~ quantile(.x$value[.x$arg > 0.5], prob = 0.25)) |> unlist() 
+```
+`tf_fwise` can be used to define custom statistics for each function that can depend on both its `value` and its `arg`.
+
+
+In addition, **`tidyfun`** provides methods for operations that are specific for functional data:
+
+## Methods for "functional" operations
 
 ### evaluate:
 
 `tf`-objects have a special `[`-operator: Its second argument specifies 
 `arg`ument values at which to evaluate the functions and has some additional options, 
-so it's easy to get point values for `tf` objects: 
+so it's easy to get point values for `tf` objects, in `matrix` or `data.frame` formats: 
 
 ```{r, warning  = FALSE}
 cca_five[1:2, seq(0, 1, l = 3)]
@@ -325,11 +349,13 @@ median(cca_five) %>% lines(col = pal_5[3], lwd = 4)
 cca_five %>% tf_where(value == max(value), "first")
 
 # where are the first maxima of the later part (t > .5) of these functions?
-cca_five[c("A", "D")] %>% tf_zoom(.5, 1) %>% tf_where(value == max(value), "first")
+cca_five[c("A", "D")] %>% tf_zoom(.5, 1) %>% 
+  tf_where(value == max(value), "first")
 
 # which f_i(t) are below the functional median anywhere for 0.2 < t < 0.6?
 # (t() needed here so we're comparing column vectors to column vectors...)
-cca_five %>% tf_zoom(0.2, 0.6) %>% tf_anywhere(value <= t(median(cca_five)[, arg]))
+cca_five %>% tf_zoom(0.2, 0.6) %>% 
+  tf_anywhere(value <= t(median(cca_five)[, arg]))
 ```
 
 
