aes: size -> linewidth
closes #155

--- a/vignettes/x04_Visualization.Rmd
+++ b/vignettes/x04_Visualization.Rmd
@@ -116,10 +116,10 @@ like the plot below showing group-wise smoothed and unsmoothed mean activity pro
 chf_df %>% 
   group_by(gender, day) %>% 
   summarize(mean_act = mean(activity)) %>% 
-  mutate(smooth_mean = tfb(mean_act)) %>% 
+  mutate(smooth_mean = tfb(mean_act, verbose = FALSE)) %>% 
   filter(day %in% c("Mon", "Sun")) %>% 
   ggplot(aes(y = smooth_mean, color = gender)) + 
-  geom_spaghetti(size = 1.25, alpha = 1) + 
+  geom_spaghetti(linewidth = 1.25, alpha = 1) + 
   geom_meatballs(aes(y = mean_act), alpha = .1) + 
   facet_grid(~ day)
 ```
