--- a/vignettes/x02_Conversion.Rmd
+++ b/vignettes/x02_Conversion.Rmd
@@ -88,12 +88,15 @@ canada = tibble(
   place = fda::CanadianWeather$place, 
   region = fda::CanadianWeather$region, 
   lat = fda::CanadianWeather$coordinates[,1], 
-  lon = -fda::CanadianWeather$coordinates[,2])
-
-canada$temp = tfd(t(fda::CanadianWeather$dailyAv[,,1]), arg = 1:365)
-canada$precipl10 = 
-  tfd(t(fda::CanadianWeather$dailyAv[,,3]), arg = 1:365) %>%
-  tf_smooth
+  lon = -fda::CanadianWeather$coordinates[,2]
+) |> 
+  mutate(
+    temp = t(fda::CanadianWeather$dailyAv[,,1]) |> 
+      tfd(arg = 1:365)
+    precipl10 = t(fda::CanadianWeather$dailyAv[,,3]) |> 
+      tfd(arg = 1:365) |>
+      tf_smooth()
+  )
 ```
 
 The resulting data frame is shown below.
@@ -216,37 +219,45 @@ dti_df =
 
 The functions `tf_unnest` and `tf_spread` reverse the operations in `tf_nest` and `tf_gather`, respectively -- that is, they take a data frame with a functional observation and produce long or wide data frames. We'll illustrate these with the `pig_df` data set. 
 
-First, to produce a long-format dataf rame, one can use `tf_unnest`:
+First, to produce a long-format data frame, one can use `tf_unnest`:
 
 ```{r}
 pig_df %>% 
-  tf_unnest()
+  tf_unnest(cols = weight) |> 
+  glimpse()
 ```
 
 To produce a wide-format data frame, one can use `tf_spread`:
 
 ```{r}
 pig_df %>% 
-  tf_spread()
+  tf_spread() |> 
+  glimpse()
 ```
 
 ## Converting back to a matrix or data frame
 
-To convert `tf` vector to a matrix, use `as.matrix`:
+To convert `tf` vector to a matrix with each row containing the function evaluations for one function, use `as.matrix`:
 
 ```{r}
 weight_vec = pig_df$weight
 
-weight_matrix = 
-  weight_vec %>% as.matrix
+weight_matrix <- 
+  weight_vec %>% as.matrix 
 
-weight_matrix[1:3, 1:5]
+head(weight_matrix)
+
+# argument values of input data saved in `arg`-attribute:
+attr(weight_matrix, "arg")
 ```
 
-To convert a `tf` vector to a standalone data frame with `"id"`,`"arg"`,`"value"`-columns, use `as.data.frame()`:
+To convert a `tf` vector to a standalone data frame with `"id"`,`"arg"`,`"value"`-columns, use `as.data.frame()` with `unnest = TRUE`:
 
 ```{r}
+weight_vec
+
 weight_vec %>% 
-  as.data.frame()
+  as.data.frame(unnest = TRUE) |> 
+  head()
 ```
 
